<resources>
    <string name="app_name">AndroidProjectTest1</string>
    <string name="create_account">Create Account</string>
    <string name="tex1">Create an account so you can explore all the existing jobs</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_up">Sign up</string>
    <string name="account">Already have an account</string>
    <string name="continue_with">Or continue with</string>
    <string name="none">none</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="power_on">power on</string>
    <string name="power_of">power of</string>
    <string name="click">click</string>
    <string name="tittle">tittle</string>
    <string name="accountText">Account Created</string>
    <string name="Email_1">Email:</string>
    <string name="Password_1">Password:</string>
    <string name="email_example">examle@test.com</string>
    <string name="test_password">test1234</string>
    <string name="Back">Back</string>
    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="Apple">Apple</string>
    <string name="phone_input_text">+994</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call">Call</string>
    <string name="send">Send</string>
    <string name="imputText">imput text</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="Home">Home</string>
    <string name="drawerOpen">Drawer Open</string>
    <string name="drawerClose">Drawer Close</string>
    <string name="Exit">Exit</string>
    <string name="Title">Title</string>
    <string name="Notes">Notes\n</string>
    <string name="Text">Text</string>
    <string name="step_1_registration">Step 1. Registration</string>
    <string name="send_code">Send code</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="step_2_email_verification">Step 2. Email verification</string>
    <string name="verification_code">Verification code</string>
    <string name="enter_here">Enter here</string>
    <string name="continue1">Continue</string>
    <string name="step_3_create_new_password">Step 3. Create new password</string>
    <string name="set_a_password">Set a password</string>
    <string name="set_password">Set password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="minimum_8_symbols">Minimum 8 symbols</string>
    <string name="repeatpassword">Repeat password</string>
    <string name="step_4_main_information">Step 4. Main information</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="enter_surname_here">Enter surname here</string>
    <string name="select_gender">Select gender</string>
    <string name="save">Save</string>
    <string name="gender">gender</string>
    <string name="surname">surname</string>
    <string name="name">name</string>
    <string name="name1">Name</string>
    <string name="surname1">Surname</string>
    <string name="save1">Save</string>
    <string name="title1">Title</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="Create_post">Create_post</string>
    <string name="description">description</string>

</resources>