<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson23.MainInformationFragment">

    <!-- Sol tərəfdə 16dp margin olan vertikal Guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <!-- Geri dönüş iconu və başlıq üçün LinearLayout -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Geri dönüş iconu -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_button" />
        <!-- "Step 4. Main information" başlığı -->
        <TextView
            android:id="@+id/MainInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="81dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/step_4_main_information"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- "Name" etiketi -->
    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/headerLayout" />

    <!-- "Name" TextInput -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48.54dp"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/enter_email_adress"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/enter_email_adress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tvNameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_here"
            android:textColorHint="@color/enter_email_adress"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <!-- "Surname" etiketi -->
    <TextView
        android:id="@+id/tvSurnameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/surname"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/etNameLayout" />

    <!-- "Surname" TextInput -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSurnameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48.54dp"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/enter_email_adress"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/enter_email_adress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tvSurnameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_surname_here"
            android:textColorHint="@color/enter_email_adress"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- "Gender" etiketi -->
    <TextView
        android:id="@+id/tvGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/gender"
        android:textColor="#777777"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/etSurnameLayout" />

    <!-- Gender TextInput və FrameLayout -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etGenderLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48.54dp"
        android:textColorHint="@color/grey"
        app:boxBackgroundColor="@color/enter_email_adress"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tvGenderLabel">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/enter_email_adress">

            <!-- Gender TextInputEditText -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/select_gender"
                android:inputType="none"
                android:textSize="16sp" />

            <!-- Gender Icon - FrameLayout-un içində mərkəzləşdirilmiş vəziyyətdə -->
            <ImageView
                android:id="@+id/ivGenderIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_dropdown" />
        </FrameLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- "Continue" düyməsi -->
    <Button
        android:id="@+id/btnSendCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="48.54dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#111111"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>