<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson23.RegistrationFragment">

    <!-- Sol tərəfdə 16dp margin olan vertikal Guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <!-- Geri dönüş iconu və başlıq üçün LinearLayout -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Geri dönüş iconu -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_button" />

        <!-- "Step 1. Registration" başlığı -->
        <TextView
            android:id="@+id/tvStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="81dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/step_1_registration"
            android:textColor="#000000"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- "Email" başlığı -->
    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/email"
        android:textSize="12sp"
        android:textColor="#777777"
        app:layout_constraintBottom_toTopOf="@id/etEmail1"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/headerLayout" />

    <!-- "Enter email address" TextInput -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmail1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48.54dp"
        app:boxBackgroundColor="@color/enter_email_adress"
        app:boxBackgroundMode="outline"
        android:textColorHint="#777777"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/emailText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:textSize="16sp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- "Send code" düyməsi -->
    <Button
        android:id="@+id/btnSendCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="48.54dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#111111"
        android:text="@string/send_code"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:cornerRadius="10dp"
     app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>